--- a/web-security/index.html
+++ b/web-security/index.html
@@ -51,14 +51,14 @@
 					<hr class="fragment" />
 					<h4 class="fragment mt10">最近のお仕事</h4>
 					<div class="fragment" style="text-align: left;">
-						<h5 class="mt10">SPA＋なWebサービスの制作</h5>
+						<h5 class="mt10">SPA＋API＋DBなWebサービスの制作</h5>
 						<ul>
 							<li>データからグラフを描画するサービス</li>
 							<li>データやファイルを送ってもらってデータベースを作るサービス</li>
 						</ul>
 						<h5 class="mt10">技術面</h5>
 						<ul>
-							<li>JavaScript[backbone.js/React.js/Node.js]</li>
+							<li>JavaScript[Backbone.js/React.js/Node.js]</li>
 							<li>Ruby、PHP</li>
 							<li>MySQL、Neo4j、RDF</li>
 						</ul>
@@ -133,7 +133,7 @@
 					<hr />
 					<ul class="fragment mt50" style="text-align: left;">
 						<li>&quot;Secure&quot;を指定してSSL環境でのみCookieを発行する</li>
-						<li class="fragment mt20">&quot;HTTPonly&quot;を指定してJavaScriptからのCookieの読み取りを許可しない</li>
+						<li class="fragment mt20">&quot;httponly&quot;を指定してJavaScriptからのCookieの読み取りを許可しない</li>
 					</ul>
 					<img class="fragment mt30" src="images/cookie_devtool.png" alt="" />
 				</section>
@@ -152,7 +152,7 @@
 						</strong>
 					</p>
 					<ul class="fragment mt20" style="text-align: left;">
-						<li>デフォルトでは外部からは何も読み込みません</li>
+						<li>デフォルトでは外部からは何も読み込みません・インラインでの実行もできません</li>
 						<li>JavaScriptのevalの使用を許可します</li>
 						<li>CSSは外部からは読み込みません・HTML内のstyleの記述は許可します</li>
 						<li>フォントは外部から読み込みません・「https://fonts.gstatic.com」からの読み込みは例外として許可します（ホワイトリスト）</li>
