Update web-security slide

--- a/web-security/index.html
+++ b/web-security/index.html
@@ -183,7 +183,7 @@
 							<ul>
 								<li>HTMLのメタタグでもポリシーの指定ができるようになる</li>
 								<li>X-Frame-Optionsを取り込み</li>
-								<li>nonce-hashの利用</li>
+								<li>nonce、hashの利用</li>
 								<li>現状はChromeとFirefoxが対応（FFは一部抜けている仕様もある）</li>
 							</ul>
 						</li>
@@ -235,7 +235,7 @@
 							<img src="images/paper.png" alt="" />
 						</div>
 					</div>
-					<p class="fragment mt20"><small>簡潔にまとめると</small><strong>CSP Lv2からのnonce-hashとCSP Lv3からの「strict-dynamic」の指定が有効</strong></p>
+					<p class="fragment mt20"><small>簡潔にまとめると</small><strong>CSP Lv2からのnonce・hashとCSP Lv3からの「strict-dynamic」の指定が有効</strong></p>
 				</section>
 
 				<section id="p13">
