Update frontend slide

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -142,6 +142,9 @@
 						<li>Web components, Shadow DOM, CSS in JS</li>
 						<li>Atomic design -> 全体から先に考える、というデザイナーの習性と合わない？</li>
 					</ul>
+					<ul class="mt30" style="text-align: left;">
+						<li><a href="https://www.sketchapp.com/" target="_blank">Sketch</a>がWeb用のデザインツールとしてかなり定着してきている印象を受けました。</li>
+					</ul>
 					<p class="mt30 refLink">
 						<a href="https://speakerdeck.com/1000ch/component-of-web-frontend" target="_blank">https://speakerdeck.com/1000ch/component-of-web-frontend</a>
 					</p>
@@ -233,9 +236,6 @@
 						</li>
 						<li>
 							<a href="https://speakerdeck.com/kyo_ago/karmawoshi-tutaspaxiang-kee2etesutoji-fa" target="_blank">karmaを使ったSPA向けのE2Eテスト技法</a>
-						</li>
-						<li>
-							<a href="https://speakerdeck.com/kyo_ago/e2etoiuming-cheng-falsezhi-sumofalse" target="_blank">E2Eという名称の指すもの</a>
 						</li>
 					</ul>
 				</section><!--/#p16-->
