Add slide link to frontend slide

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -237,6 +237,11 @@
 						<li>
 							<a href="https://speakerdeck.com/kyo_ago/karmawoshi-tutaspaxiang-kee2etesutoji-fa" target="_blank">karmaを使ったSPA向けのE2Eテスト技法</a>
 						</li>
+						<li>
+							<a href="https://github.com/insidefrontend/issue-1/blob/master/topics/session/B3-hiloki-css/slide/20170225-insidefrontend-refactoring-css.pdf" target="_blank">
+								Refactoring CSS: 管理されたカオスへの道のり
+							</a>
+						</li>
 					</ul>
 				</section><!--/#p16-->
 			</div><!--/.slides-->
