Add text to frontend slide

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -157,7 +157,7 @@
 				</section><!--/#p8-->
 
 				<section id="p9">
-					<h1 class="pageHeader pageHeader-if">INSIDE FRONTEND</h1>
+					<h1 class="pageHeader pageHeader-if"><a href="http://inside-frontend.com/" target="_blank">INSIDE FRONTEND</a></h1>
 					<h4 class="mt20">2017.02.25<br />Yahoo! JAPAN（東京ガーデンテラス紀尾井町）</h4>
 					<div class="mt30 clearfix">
 						<div class="colLeft" style="text-align: center;"><img src="./images/fig04.png" width="284" height="380" alt="" /></div>
@@ -227,13 +227,15 @@
 				</section><!--/#p12-->
 
 				<section id="p13">
-					<h1 class="pageHeader pageHeader-if">ReactについてのAMA</h1>
+					<h1 class="pageHeader pageHeader-if">ReactについてのAsk me anything</h1>
 					<ul class="mt30" style="text-align: left;">
 						<li>Reactはviewのみなので、ビジネスロジックどうするか問題->現状Redux一人勝ち？</li>
 						<li>Reactを使うと、細かいフレームワークをたくさん入れる場合が多いが、ライセンスやアップデートの問題がある。</li>
 						<li>one large frameworkの利点もある。ex.)Angular ->なるべく依存しないような心がけは持っておくべき。</li>
 						<li>どんなフレームワークでも、工数はあまり変わらないのでは？</li>
-						<li>もやもやしているところはみんなもやもやしてる、ということがわかってよかったです。</li>
+					</ul>
+					<ul class="mt30" style="text-align: left;">
+						<li>もやもやしているところはみんなもやもやしてる、ということが分かってよかったです。</li>
 					</ul>
 				</section><!--/#p13-->
 
@@ -244,7 +246,7 @@
 						<li>d3.jsを使用している。それなりに時間をかけて作っている印象（データの収集・整形も入っているから）。</li>
 						<li>d3.jsは手軽にグラフが書ける、というものではない。</li>
 						<li>d3.jsにはブラウザがサポートしていない仕様を補完する機能はない。</li>
-						<li>d3.jsやSVGの特性上できないものは、力技のhackのようなこともしている。・・・ということがわかって嬉しかった。</li>
+						<li>d3.jsやSVGの特性上できないものは、力技のhackのようなこともしている。・・・ということがわかって嬉しかった。<br />z-indexが使えないとか、テキストが折り返さないとか。</li>
 					</ul>
 					<p class="mt30 refLink">
 						スライド：<a href="http://shimz.me/slide/inside-frontend_1/" target="_blank">http://shimz.me/slide/inside-frontend_1/#/</a>
