Update frontend slide

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -115,7 +115,7 @@
 
 				<section id="p7">
 					<div class="mt30">
-						<p style="text-align: center;">特徴：<strong>コンポーネント志向・データフローを一方通行に・Virtual DOM</strong></p>
+						<p style="text-align: center;">特徴：<strong>コンポーネント志向・データフローを一方通行に・Virtual DOM・型っぽいアプローチ</strong></p>
 						<ul style="text-align: left;">
 							<li>データが変化したら自動的に（すべての）ビューが更新される === データとビューの乖離が起こらない</li>
 							<li>すべてのビューの更新ではあっても、Virtual DOMによって自動的に差分のみが再レンダリングされるので、動作は重たくならない。</li>
