--- a/graph-data/index.html
+++ b/graph-data/index.html
@@ -15,7 +15,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/reveal.css">
-	<link rel="stylesheet" href="css/theme/black.css" id="theme">
+	<link rel="stylesheet" href="css/theme/white.css" id="theme">
 
 	<!-- Code syntax highlighting -->
 	<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -35,8 +35,42 @@
 		<div class="reveal">
 			<div class="slides">
 				<section id="p1">
+					<h1 style="text-align: left;">グラフ構造データを扱うはなし</h1>
+					<h4 class="mt50" style="text-align: left;">
+						<a href="https://rawcode.net/">Yu Watanabe(@yuw27b)</a><br />2017.03.25 NDS 第51回勉強会
+					</h4>
+				</section>
 
-				</section><!--/#p1-->
+				<section id="p2">
+					<h2>自己紹介</h2>
+					<h4 class="fragment">
+						<span class="p2_place">ECサイト運営<br /><small>[東京]</small></span>
+						<i class="fa fa-truck fa-flip-horizontal" aria-hidden="true"></i>
+						<span class="p2_place">非常勤エンジニア＋フリーランス<br /><small>[新潟]</small></span>
+					</h4>
+					<hr class="fragment" />
+					<h4 class="fragment mt10">最近のお仕事</h4>
+					<div class="fragment" style="text-align: left;">
+						<h5 class="mt10">SPA＋API＋DBなWebサービスの制作</h5>
+						<ul>
+							<li>データからグラフを描画するサービス</li>
+							<li>データやファイルを送ってもらってデータベースを作るサービス</li>
+						</ul>
+						<h5 class="mt10">技術面</h5>
+						<ul>
+							<li>JavaScript[Backbone.js/React.js/Node.js]</li>
+							<li>Ruby、PHP</li>
+							<li>MySQL、Neo4j、RDF</li>
+						</ul>
+						<p class="fragment">サービスのサーバ設定・管理</p>
+						<p class="fragment">HTML＋CSS＋JavaScriptのコーディング</p>
+					</div>
+					<p class="fragment" style="text-align: right;"><small>・・・などをやっています。</small></p>
+				</section>
+
+				<section id="p3">
+
+				</section>
 			</div><!--/.slides-->
 		</div><!--/.reveal-->
 
@@ -51,7 +85,7 @@
 				progress: false,
 				slideNumber: true,
 				overview: false,
-				center: false,
+				center: true,
 				touch: true,
 				transitionSpeed: 'fast',
 				// More info https://github.com/hakimel/reveal.js#dependencies
